# Scientific-Data-Visualization-with-VTK

./: README.md
c++ project/assignment 4/make/cmake/: CMakeLists.txt
c++ project/assignment 4/make/vs2013/: VTK_Properties.props  assignment4.sln  assignment4.vcxproj  assignment4.vcxproj.filters
c++ project/assignment 4/make/vs2013/Debug/: vc120.idb
c++ project/assignment 4/make/vs2013/Debug/assignment4.tlog/: CL.read.1.tlog  CL.write.1.tlog  assignment4.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
c++ project/assignment 4/source/: assignment4.cpp
c++ project/vtk/vs12/cmake/hdf5/: libhdf5.settings
c++ project/vtk/vs12/include/vtk-8.1/: vtkConfigure.h
c++ project/vtk/vs12/lib/cmake/vtk-8.1/: VTKConfig.cmake  VTKConfigVersion.cmake  VTKTargets-release.cmake
